[build-system]
requires = [
    "setuptools>=61.0",
    "pulsar-client==3.5.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "sunstrike_python"
version = "0.0.1"
description = "Python Boilerplate contains all the boilerplate you need to create a Python package."
readme = "README.rst"
authors = [
  {name = "Bird", email = "Na"}
]
maintainers = [
  {name = "Bird", email = "Na"}
]
classifiers = [

]
license = {text = "Apache Software License 2.0"}
dependencies = [

]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/Na/sunstrike_python/issues"
changelog = "https://github.com/Na/sunstrike_python/blob/master/changelog.md"
homepage = "https://github.com/Na/sunstrike_python"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

